text wrap color fix

--- a/assets/html/prva_godina/assets/css/style.css
+++ b/assets/html/prva_godina/assets/css/style.css
@@ -291,6 +291,7 @@ article.active {
   text-overflow: ellipsis; 
   overflow: hidden; 
   white-space: nowrap;
+  color: var(--vegas-gold);
 }
 
 
